--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "cms-transform",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "jt-factory",
+  "version": "0.0.1",
+  "main": "dist/main.js",
   "license": "MIT",
   "dependencies": {
+    "chroma-js": "^2.4.2",
     "front-matter": "^4.0.2",
-    "marked": "^11.1.1"
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.10",
+    "hasha": "^6.0.0",
+    "marked": "^11.1.1",
+    "mergician": "^2.0.0",
+    "mime-types": "^2.1.35",
+    "sharp": "^0.33.2"
   },
   "type": "module",
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0"
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
