--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.0.1",
   "main": "dist/main.js",
   "license": "MIT",
+  "author": "Jonny Thaw <hi@jthaw.me>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jthawme/factory.git"
+  },
+  "keywords": [
+    "markdown",
+    "markdown transform",
+    "cms build tool",
+    "static cms"
+  ],
   "dependencies": {
     "chroma-js": "^2.4.2",
     "front-matter": "^4.0.2",
@@ -25,5 +36,9 @@
   },
   "jest": {
     "transform": {}
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/jthawme/factory/issues"
+  },
+  "homepage": "https://github.com/jthawme/factory"
 }
