--- a/package.json
+++ b/package.json
@@ -32,13 +32,10 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "jest": "^29.7.0",
-    "jest-cli": "^29.7.0",
-    "rimraf": "^5.0.5"
+    "jest": "^29.7.0"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c",
+    "build": "rollup -c",
     "dev": "rollup -c --watch",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "release": "npm run build && npm version patch --force && npm publish",
@@ -51,5 +48,6 @@
   "bugs": {
     "url": "https://github.com/jthawme/factory/issues"
   },
-  "homepage": "https://github.com/jthawme/factory"
+  "homepage": "https://github.com/jthawme/factory",
+  "packageManager": "yarn@4.0.2"
 }
