--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
   },
   "type": "module",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist && rollup -c",
     "dev": "rollup -c --watch",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "release": "npm run build && npm version patch --force && npm publish",
